src/objects/Image__c.object
<CustomObject>
    <description>Object for storing images retrieved from the Image API</description>
    <fields>
        <fullName>AlbumId__c</fullName>
        <description>Image Id from the Image API</description>
        <label>AlbumId</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DisplayedImage__c</fullName>
        <description>Formula displaying image from the url stored on the object</description>
        <formula>IMAGE(ImageUrl__c, &quot;Image&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Displayed Image</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ImageApiId__c</fullName>
        <description>Id from the Image API</description>
        <externalId>true</externalId>
        <label>ImageApiId</label>
        <length>10</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>ImageTitle__c</fullName>
        <description>Image title from the Image API</description>
        <label>Image Title</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ImageUrl__c</fullName>
        <description>Image Url from the Image API, used as External Id</description>
        <label>Image Url</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ThumbnailUrl__c</fullName>
        <description>Thumbnail url from the Image API</description>
        <label>Thumbnail Url</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Image</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>ImageUrl__c</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <label>All Images</label>
    </listViews>
    <nameField>
        <displayFormat>Image-{0000}</displayFormat>
        <label>Image</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Images</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>